# surface-dtx-daemon

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: ci.yml
doc/: ec-flow.xml  ec-user-signals.txt
etc/: attach.sh  detach.sh
etc/dbus/: org.surface.dtx.conf
etc/dtx/: detach.sh  surface-dtx-daemon.conf  surface-dtx-userd.conf  surface-dtx.cfg
etc/systemd/: surface-dtx-daemon.service  surface-dtx-userd.service
etc/udev/: 40-surface_dtx.rules
pkg/arch/: .gitignore  PKGBUILD
pkg/deb/: .gitignore  makedeb  makedeb.sh
pkg/deb/debian/: changelog  control  rules
pkg/fedora/: surface-dtx-daemon.spec
src/: cli.rs  config.rs  device.rs  error.rs  main.rs  service.rs
surface-dtx-daemon/: Cargo.toml  build.rs
surface-dtx-daemon/src/: cli.rs  config.rs  device.rs  error.rs  logic.rs  main.rs  service.rs  tq.rs  utils.rs
surface-dtx-daemon/src/logic/: core.rs  debug.rs  mod.rs  proc.rs  srvc.rs
surface-dtx-daemon/src/service/: arg.rs  event.rs  mod.rs  prop.rs
surface-dtx-daemon/src/utils/: mod.rs  scope.rs  task.rs  taskq.rs  tracing.rs
surface-dtx-userd/: Cargo.toml  build.rs
surface-dtx-userd/src/: cli.rs  config.rs  error.rs  logic.rs  main.rs  notify.rs
surface-dtx-userd/src/logic/: core.rs  mod.rs  types.rs
surface-dtx-userd/src/utils/: mod.rs  notify.rs
