[package]
name = "surface-dtx"
version = "0.1.0"
authors = ["Maximilian Luz <luzmaximilian@gmail.com>"]
edition = "2018"

[[bin]]
name = "surface-dtx-daemon"
path = "src/main.rs"

[dependencies]
libc = "0.2.51"
nix = "0.13.0"
failure = "0.1.5"
futures = "0.1.26"
tokio = "0.1.18"
tokio-file-unix = "0.5.1"
tokio-signal = "0.2.7"
tokio-timer = "0.2.10"
tokio-process = "0.2.3"
dbus = "0.6.4"
dbus-tokio = "0.3.0"
toml = "0.5.0"
serde = { version = "1.0.90", features = ['derive'] }
clap = "2.33.0"
slog = "2.4.1"
slog-term = "2.4.0"
signal-hook = "0.1.8"
