[package]
name = "surface-dtx-userd"
version = "0.3.9"
authors = ["Maximilian Luz <luzmaximilian@gmail.com>"]
description = "Surface Detachment System (DTX) User Daemon"

repository = "https://github.com/linux-surface/surface-dtx-daemon/"
license = "MIT"

edition = "2018"
build = "build.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["cargo"] }
dbus = "0.9.7"
dbus-tokio = "0.7.6"
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_ignored = "0.1.11"
tokio = { version = "1.44.2", features = ["macros", "rt", "signal"] }
toml = "0.9.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["std", "env-filter"] }

[build-dependencies]
clap = "4.5.37"
clap_complete = "4.5.47"
